Improved lots of details on smaller screens, general fixes, intermittent commit.

--- a/css/basics.less
+++ b/css/basics.less
@@ -56,6 +56,11 @@ h1 {
   font-size: 5rem;
   line-height: 3*@line;
   font-weight: 500;
+
+  @media (max-width: @break2) {
+    font-size: 3rem;
+    line-height: 2*@line;
+  }
 }
 
 h2 {
